Closed
Bug 1468691
Opened 7 years ago
Closed 7 years ago
TEST-UNEXPECTED-FAIL | comm/mailnews/compose/test/unit/test_sendMessageLater3.js (windows only)
Categories
(Thunderbird :: General, defect)
Thunderbird
General
Tracking
(Not tracked)
RESOLVED
FIXED
Thunderbird 62.0
People
(Reporter: jorgk-bmo, Assigned: jorgk-bmo)
References
Details
(Whiteboard: [Thunderbird-testfailure: X Win7 debug only])
Attachments
(2 files)
|
1.30 KB,
patch
|
aceman
:
review+
|
Details | Diff | Splinter Review |
|
1.02 KB,
patch
|
aceman
:
review+
emk
:
feedback+
|
Details | Diff | Splinter Review |
TEST-UNEXPECTED-FAIL | comm/mailnews/compose/test/unit/test_sendMessageLater3.js | xpcshell return code: 1
PROCESS-CRASH | comm/mailnews/compose/test/unit/test_sendMessageLater3.js | application crashed [@ nsIFile::HumanReadablePath()]
First seen: Sun, May 27, 2018, 00:39:48
M-C last good: c4cf8be3acc84273cf07d4c3e48a1b89c5
https://treeherder.mozilla.org/#/jobs?repo=comm-central&revision=c6dbf51f60175062c0ebf8627f523084cc0c2e69
M-C first bad: 4e9446f9e8f0a75c7ffe063f1dfb311cc9
https://treeherder.mozilla.org/#/jobs?repo=comm-central&revision=7148c6f9fce243ff25afeaee0e4799b6f16d30fd
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=c4cf8be3acc84273cf07d4c3e48a1b89c5&tochange=4e9446f9e8f0a75c7ffe063f1dfb311cc9
Nothing in that range that looks suspicious. I can't reproduce this on Windows 10 and it also doesn't fail on Windows 10 on the tree.
Masatoshi-san, could you please take a look. Here are a few lines from the log:
https://taskcluster-artifacts.net/XQ4uYJV2TVanugE59VwRHA/0/public/logs/live_backing.log
01:12:39 WARNING - PROCESS-CRASH | comm/mailnews/compose/test/unit/test_sendMessageLater3.js | application crashed [@ nsIFile::HumanReadablePath()]
01:12:39 INFO - Crash dump filename: c:\users\task_1527382680\appdata\local\temp\xpc-other-rbynvd\4b0f2b17-e0f0-4120-aa22-bed47382078c.dmp
01:12:39 INFO - Operating system: Windows NT
01:12:39 INFO - 6.1.7601 Service Pack 1
01:12:39 INFO - CPU: x86
01:12:39 INFO - GenuineIntel family 6 model 63 stepping 2
01:12:39 INFO - 8 CPUs
01:12:39 INFO - GPU: UNKNOWN
01:12:39 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_READ
01:12:39 INFO - Crash address: 0xffffffffe5e5e5e5
01:12:39 INFO - Process uptime: 1 seconds
01:12:39 INFO - Thread 0 (crashed)
01:12:39 INFO - 0 xul.dll!nsIFile::HumanReadablePath() [nsLocalFileWin.cpp:4e9446f9e8f0a75c7ffe063f1dfb311cc90d56cf : 3384 + 0x0]
01:12:39 INFO - eip = 0x513b6b53 esp = 0x001ef80c ebp = 0x001ef874 ebx = 0x0a0d6ac0
01:12:39 INFO - esi = 0xe5e5e5e5 edi = 0x001ef88c eax = 0x001ef814 ecx = 0x001ef814
01:12:39 INFO - edx = 0x00000000 efl = 0x00010202
01:12:39 INFO - Found by: given as instruction pointer in context
01:12:39 INFO - 1 xul.dll!nsMsgDBService::~nsMsgDBService() [nsMsgDatabase.cpp:4e9446f9e8f0a75c7ffe063f1dfb311cc90d56cf : 86 + 0x13]
Flags: needinfo?(VYV03354)
Comment 1•7 years ago
|
||
Are you sure m_dbCache is always valid here?
https://dxr.mozilla.org/comm-central/rev/51678c5b0b3edd827c57a70f1c5baf02d44acead/mailnews/db/msgdb/src/nsMsgDatabase.cpp#86
m_dbCache is an array of raw pointers!
Flags: needinfo?(VYV03354)
| Assignee | ||
Comment 2•7 years ago
|
||
Grrrrr, that's another incarnation of bug 1377692 which has just shifted :-(
Depends on: 1377692
| Assignee | ||
Comment 3•7 years ago
|
||
No point crashing here while we haven't fixed bug 1342858 :-(
Comment on attachment 8985799 [details] [diff] [review]
1468691-dont-print.patch
Review of attachment 8985799 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks.
Attachment #8985799 -
Flags: review?(acelists) → review+
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/0d17b436ed09
don't print names of left-open DBs on server builds to avoid crashes. r=aceman
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•7 years ago
|
Target Milestone: --- → Thunderbird 62.0
| Assignee | ||
Comment 6•7 years ago
|
||
That didn't work, still crashing here :-(
https://treeherder.mozilla.org/#/jobs?repo=comm-central&revision=b317e384ddae3e53085a36ca8432a48666378b62&selectedJob=183589044
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 7•7 years ago
|
||
I'm a bit puzzled by this, the crashing code shouldn't have been compiled in to the binary. Masatoshi-san, does OFFICIAL_BUILD not get set in C++? I can see it here:
https://searchfox.org/mozilla-central/search?q=OFFICIAL_BUILD&case=false®exp=false&path=.h
What am I missing/doing wrong?
Flags: needinfo?(VYV03354)
Comment 8•7 years ago
|
||
(In reply to Jorg K (GMT+2) from comment #7)
> I'm a bit puzzled by this, the crashing code shouldn't have been compiled in
> to the binary. Masatoshi-san, does OFFICIAL_BUILD not get set in C++? I can
> see it here:
> https://searchfox.org/mozilla-central/
> search?q=OFFICIAL_BUILD&case=false®exp=false&path=.h
> What am I missing/doing wrong?
Note that all search results are from imported Google code. The OFFICIAL_BUILD macro is irrelevant to us.
Flags: needinfo?(VYV03354)
| Assignee | ||
Comment 9•7 years ago
|
||
Thanks, I confused it with MOZILLA_OFFICIAL :-(
https://searchfox.org/comm-central/search?q=MOZILLA_OFFICIAL&case=false®exp=false&path=.cpp
That can be used, right?
| Assignee | ||
Comment 10•7 years ago
|
||
Attachment #8985919 -
Flags: review?(acelists)
Attachment #8985919 -
Flags: feedback?(VYV03354)
Updated•7 years ago
|
Attachment #8985919 -
Flags: feedback?(VYV03354) → feedback+
Attachment #8985919 -
Flags: review?(acelists) → review+
| Assignee | ||
Comment 11•7 years ago
|
||
Thank you both, let's see whether we have more luck this time ;-)
Comment 12•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/d494b829635c
Follow-up: Use MOZILLA_OFFICIAL instead of OFFICIAL_BUILD. r=aceman
Status: REOPENED → RESOLVED
Closed: 7 years ago → 7 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•