Bug 1468691 - don't print names of left-open DBs on server builds to avoid crashes. r=aceman